text align fix in semester projects page

--- a/hugo/public/stylesheet.css
+++ b/hugo/public/stylesheet.css
@@ -579,9 +579,14 @@ textarea {
 }
 
 
+
 .projectdetails{
   display: none;
   padding-top: 20px;
+  padding: auto;
+  margin: auto;
+  width: max-content;
+
 }
 
 .projectdetails p{
